Add normal delegate implementation, add one event.

--- a/AndroMooda3/Resources/layout/activity_main.xml
+++ b/AndroMooda3/Resources/layout/activity_main.xml
@@ -15,6 +15,6 @@
     <Button
         android:id="@+id/buttonTry"
         android:text="Try"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
