Add errorHandlerAndroid implementation

--- a/AndroMooda3/Resources/layout/activity_main.xml
+++ b/AndroMooda3/Resources/layout/activity_main.xml
@@ -19,6 +19,12 @@
         android:src="@drawable/close"
         android:visibility="gone"
         android:layout_margin="16dp" />
+
+    <Button
+        android:id="@+id/error_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show Error" />
     
     <ImageButton
         android:id="@+id/button_capture"
