--- a/AndroMooda3/Resources/layout/activity_main.xml
+++ b/AndroMooda3/Resources/layout/activity_main.xml
@@ -1,38 +1,26 @@
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:minWidth="25px"
-    android:minHeight="25px"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rootView">
-    <TextureView
-        android:id="@+id/cameraTextureView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    
-    <ImageButton
-        android:id="@+id/button_close"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/close"
-        android:visibility="gone"
-        android:layout_margin="16dp" />
+    android:minWidth="25px"
+    android:minHeight="25px">
 
-    <Button
-        android:id="@+id/error_button"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_images"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_images"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_add_image"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show Error" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="32dp"
+        android:src="@drawable/image_plus" />
     
-    <ImageButton
-        android:id="@+id/button_capture"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/camera_iris"
-        android:layout_marginBottom="16dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true" />
 </RelativeLayout>
