--- a/AndroMooda3/Resources/layout/item_images.xml
+++ b/AndroMooda3/Resources/layout/item_images.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="128dp"
-    android:layout_height="128dp">
+<android.support.percent.PercentFrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     
     <ImageView
         android:id="@+id/mood_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         android:src="@drawable/face" />
     
     <LinearLayout
         android:id="@+id/mood_chip"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_gravity="end|bottom" />
 
-</RelativeLayout>
+</android.support.percent.PercentFrameLayout>
